@@ -2,7 +2,7 @@ Package: ccaPP
 Type: Package
 Title: (Robust) canonical correlation analysis via projection pursuit
 Version: 0.3.1
-Date: 2014-11-06
+Date: 2015-09-10
 Depends:
     R (>= 3.0.2),
     parallel,
