@@ -1,7 +1,7 @@
 % Generated by roxygen2 (4.0.1.99): do not edit by hand
 \name{permTest}
 \alias{permTest}
-\title{(Robust) permutation test for independence}
+\title{(Robust) permutation test for no association}
 \usage{
 permTest(x, y, R = 1000, fun = maxCorGrid, permutations = NULL,
   nCores = 1, cl = NULL, seed = NULL, ...)
@@ -52,8 +52,8 @@ data sets.}
 \item{call}{the matched function call.}
 }
 \description{
-Test for independence of two data sets, with a focus on robust and
-nonparametric correlation measures.
+Test whether or not there is association betwenn two data sets, with a focus
+on robust and nonparametric correlation measures.
 }
 \details{
 The test generates \code{R} data sets by randomly permuting the observations
