@@ -2,6 +2,9 @@ Changes in ccaPP version 0.3.1
 
     + Added 'diabetes' data from Andrews & Herzberg (1985).
     
+    + Print method and help file of permutation tests no longer use the term 
+      'independence'.
+    
     + Bugfix in functions for CCA: R session no longer crashes for higher-order 
       canonical correlations in case of high-dimensional data.
 
